# SILT

./: LICENSE  Makefile  README.md  condarc.template  environment.yml  make.bat
.github/workflows/: silt-cicd.yml
sample_images/aerial_homes/: HG_Aerial_ThumbPic1.h5  HG_Aerial_ThumbPic1.siltlabels.json  HG_Aerial_sampleoverlay.json
sample_images/aerial_homes_with-checklist/: HG_Aerial_ThumbPic1_with-checklist.siltlabels.json
sample_images/color_trees/: color_trees.siltlabels.json
sample_images/trees/: trees.siltlabels.json
sample_images/xview/: 10.json
sample_templates/: aerial-sample.silttemplate.json  tree-sample.silttemplate.json  xview.silttemplate.json
scripts/: convert_to_h5.py  geotif_to_h5.py  source_conda.sh
silt/: MANIFEST.in  aerial-homes_siltconfig.json  pyproject.toml  xview_siltconfig.json
silt/src/silt/: __main__.py  checkable_combobox_widget.py  interactive_polygon_item.py  levels_slider_widget.py  mainwidget.py  mainwindow.py  multi_input_panel.py  poly_assist_widget.py  pyramid_preprocessing.py  silt.py  test.py  tmp.py  utils.py  view_widget.py
silt/src/silt/polygon_assists/: activeContours_polygonAssist.py  image_preprocessor.py  polygonAssist.py  polygonAssistTest.py  sam_polygonAssist.py
silt/src/silt/thumbs/: thumbnail_creator.pptx
silt/test/: checkable_combobox_widget_test.py  levels_slider_widget_test.py  mainwindow_test.py  multi_input_panel_test.py  pyramid_preprocessing_test.py  pytest.ini  utils.py  view_widget_test.py
silt/test/test_data/: test.silttemplate.json
utils/: configure_conda.bash
(+22 files in other folders)
